error messages traduits + validation telephone

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -99,8 +99,11 @@ fr:
               blank: "doit être rempli"
             email:
               blank: "doit être rempli"
+              taken: "existe déjà"
+              invalid: "n'est pas au bon format"
             telephone:
               blank: "doit être rempli"
+              invalid: "n'est pas au bon format"
             password:
               blank: "doit être rempli"
 
