modifs pauline admin fini

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -155,6 +155,7 @@ fr:
         confirmed_at: "Confirmé le"
       bin:
         bin_type_id: "Type de déchet"
+        bin_type: "Type de déchet"
         frequency_number: "Fréquence"
         frequency_periodicity: "Périodicité"
         collector: "Collecteur"
@@ -167,6 +168,9 @@ fr:
         end_at: Date de fin
         filled_rate: Taux de remplissage
         company: Structure
+        bin_type: "Type de déchet"
+        density: "Densité"
+        employees_nb: "Collaborateurs"
       priority_action:
         priority_level: Niveau de priorité
       company_behaviour:
