--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -99,6 +99,7 @@ fr:
       user: Utilisateurs
       form: Formulaires d'inscription
       user_behaviour_diag: Diagnostic collaborateurs
+      user_behaviour_result: Bilan collaborateurs
       company_behaviour: Diagnostic structure
       company: Entreprises
       referent: Référent
@@ -252,6 +253,50 @@ fr:
         age: 18. Age
         seniority: 19. Ancienneté
         page_five: Diagnostic fini
+      user_behaviour_result:
+        company: Structure
+        user: Utilisateur
+        starting_month: 1. Mois de départ
+        action_mades: 2. Actions mises en place
+        actions_made_reasons: 3. Raisons
+        no_action_mades: 4. Actions non mises en place
+        not_made_reasons: 5. Raisons
+        actions_not_made_comment: 5.1 Commentaire
+        work_sorting_order: 6. Consignes de tri
+        work_sorting_applied: 7. Application
+        work_trash_reduction: 8. Réduction des déchets
+        work_trash_reduction_comment: 8.1 Commmentaire
+        home_sorting_order: 9. Consigne de tri (maison)
+        home_sorting_applied: 10. Application (maison)
+        home_trash_reduction: 11. Geste de réduction
+        home_trash_reduction_comment: 11.1 Précisions
+        context_knowledge: 12. Contexte
+        context_knowledge_comment: 12.1 Précisions
+        concerned: 13. Concerné
+        concerned_comment: 13.1 Commentaire
+        favorable_reduction: 14. Favorable
+        crappy_reduction: 15. Embêtant
+        trash_reduction_hard: 16. Compliqué
+        trash_reduction_hard_comment: 16.1 Commentaire
+        dedicated_employee: 17. Personne ressource inutile
+        dedicated_employee_comment: 17.1 Commentaire
+        work_continue: 18. Continue au travail
+        work_continue_comment: 18.1 Commentaire
+        home_continue: 19. Continue à la maison
+        home_continue_comment: 19.1 Commentaire
+        accompanier_sort_ready: 20. Prêt à accompagner Tri
+        accompanier_sort_ready_comment: 20.1 Commentaire
+        accompanier_sort_want: 21. Volonté d'accompagner Tri
+        accompanier_sort_want_comment: 21.1 Commentaire
+        accompanier_reduction_ready: 22. Prêt à accompagner Réduction
+        accompanier_reduc_ready_comment: 22.1 Commentaire
+        accompanier_reduction_want: 23. Volonté d'accompagner Réduction
+        accompanier_reduc_want_comment: 23.1 Commentaire
+        sex: 24. Sexe
+        age: 25. Age
+        seniority: 26. Ancienneté
+        page_six: Diagnostic fini
+
       company_behaviour:
         company: Structure
         participants_nb: 1. Nombre de participant
