preparation admin bilan structure

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -100,7 +100,7 @@ fr:
       form: Formulaires d'inscription
       user_behaviour_diag: Diagnostic collaborateurs
       user_behaviour_result: Bilan collaborateurs
-      company_behaviour: Diagnostic structure
+      company_behaviour: Diag/bilan structure
       company: Entreprises
       referent: Référent
       bin: Bacs
